--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- raleway font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;900&display=swap" rel="stylesheet" />
     <title>I.M - Portfolio</title>
-    <link rel="stylesheet" href="css/master.css">
+    <link rel="stylesheet" href="css/master.css" />
 </head>
 
 <body>
@@ -19,7 +19,7 @@
         <div class="container">
             <nav>
                 <div class="site_logo">
-                    <a href="#"> <img src="images/I.M_LOGO.svg" alt="I.m Logo"></a>
+                    <a href="#"> <img src="images/I.M_LOGO.svg" alt="I.m Logo" /></a>
                 </div>
 
                 <ul class="links">
@@ -30,14 +30,10 @@
                 </ul>
 
                 <div id="menu-bar" class="menu-icon">
-                    <img src="images/menu bars.svg" alt="menu icon">
+                    <img src="images/menu bars.svg" alt="menu icon" />
                 </div>
-
             </nav>
         </div>
-
-
-
     </header>
     <!-- start header -->
 
@@ -46,7 +42,9 @@
         <div class="container">
             <div class="hero_content">
                 <h1 class="title">Hey! I,m Ibrahim Mohsen</h1>
-                <p> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley</p>
+                <p>
+                    is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+                </p>
 
                 <div class="buttons-cta">
                     <a href="#" class="btn btn-primary">Let's talk</a>
@@ -60,40 +58,73 @@
                     <li><a href="#">youtube</a></li>
                 </ul> -->
             </div>
-            <div class="hero_image">
-                <img src="images/" alt=""> image here
-            </div>
+            <div class="hero_image"><img src="images/" alt="" /> image here</div>
         </div>
-
     </section>
     <!-- ./hero Section -->
     <div class="hero_shape"></div>
 
-
     <!-- about me -->
     <section class="about">
-        <div class="about-img">
-            <img src="images/man.png" alt="">
-        </div>
-        <div class="about-info">
-            <div class="container">
-                <h2>Who Am I</h2>
-                <p>If you’re starting an online business and creating content, you’re almost certainly going to create either written or video content – or both. The problem is that it can be hard to know whicght foot is going to save you a lot of time.If
-                    you’re starting an online business and creating content, you’re almost certainly going to create either written or video content – or both. The problem is that it can be hard to know whicght foot is going to save you a lot of time.If
-                    you’re starting an online business and creating content, you’re almost certainly going to create either written or video content – or both. The problem is that it can be hard to know whicght foot is going to save you a lot of time.</p>
+        <div class="container">
+            <div class="about-wraper">
+                <div class="about-img">
+                    <img src="images/man.png" alt="" />
+                </div>
+                <div class="about-info">
+                    <div class="container">
+                        <h2>Who Am I</h2>
+                        <p>
+                            If you’re starting an online business and creating content, you’re almost certainly going to create either written or video content – or both. The problem is that it can be hard to know whicght foot is going to save you a lot of time.If you’re starting
+                            an online business and creating content, you’re almost certainly going to create either written or video content – or both. The problem is that it can be hard to know whicght foot is going to save you a lot of time.If you’re
+                            starting an online business and creating content, you’re almost certainly going to create either written or video content – or both. The problem is that it can be hard to know whicght foot is going to save you a lot of time.
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
     <!-- ./about me -->
 
+    <!-- skilles -->
+    <section class="skilles secion-p">
+        <div class="container">
+            <div class="skills-wraper">
+                <div class="skills_image">
+                    <img src="images/illistrator skill.svg" alt="skills photo" />
+                </div>
+                <div class="skills-info">
+                    <h2>What I Can Do</h2>
+                    <p>If you’re starting an online business and creating content, you’re almost certainly going to create either written or video content – or both. The problem is that it can be hard to know whicght foot is going to save you a lot of time.If
+                        you’re starting an online business and creating content, you’re almost certainly going to create either written or video content – or both. The problem is that it can be hard to know whicght foot is going to save you a lot of time.If
+                        you’re starting an online business and creating content, you’re almost certainly going to create either written or video content – or both. The problem is that it can be hard to know whicght foot is going to save you a lot of time.</p>
+
+                    <div class="skills-icons">
+                        <div class="item">
+                            <img src="images/skills_icons/Css Icon.svg" alt="">
+                        </div>
+                        <div class="item">
+                            <img src="images/skills_icons/html icon.svg" alt="">
+                        </div>
+                        <div class="item">
+                            <img src="images/skills_icons/js Icon.svg" alt="">
+                        </div>
+                        <div class="item">
+                            <img src="images/skills_icons/react Icon.svg" alt="">
+                        </div>
 
 
 
 
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
+    <section class="services secion-p">
 
-
-
+    </section>
     <script src="js/master.js"></script>
 </body>
 
