--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
                 </div>
                 <div class="about-info">
                     <div class="container">
-                        <h2>Who Am I</h2>
+                        <header class="subtitle">
+                            <h2 class="title">Who Am I</h2>
+                        </header>
                         <p>
                             If you’re starting an online business and creating content, you’re almost certainly going to create either written or video content – or both. The problem is that it can be hard to know whicght foot is going to save you a lot of time.If you’re starting
                             an online business and creating content, you’re almost certainly going to create either written or video content – or both. The problem is that it can be hard to know whicght foot is going to save you a lot of time.If you’re
@@ -94,7 +96,10 @@
                     <img src="images/illistrator skill.svg" alt="skills photo" />
                 </div>
                 <div class="skills-info">
-                    <h2>What I Can Do</h2>
+
+                    <header class="subtitle">
+                        <h2 class="title">What I Can Do</h2>
+                    </header>
                     <p>If you’re starting an online business and creating content, you’re almost certainly going to create either written or video content – or both. The problem is that it can be hard to know whicght foot is going to save you a lot of time.If
                         you’re starting an online business and creating content, you’re almost certainly going to create either written or video content – or both. The problem is that it can be hard to know whicght foot is going to save you a lot of time.If
                         you’re starting an online business and creating content, you’re almost certainly going to create either written or video content – or both. The problem is that it can be hard to know whicght foot is going to save you a lot of time.</p>
@@ -123,7 +128,42 @@
     </section>
 
     <section class="services secion-p">
+        <div class="container">
+            <header class="subtitle">
+                <h2 class="title">Why Hire Me For Your<span>Next Project</span></h2>
+            </header>
 
+            <div class="services-info">
+                <p>If you’re starting an online business and creating content, you’re almost certainly going to create either written or video content – or both. The problem is that it can be hard to know whicght foot is going to save you a lot of time.</p>
+            </div>
+
+            <div class="services-wraper">
+                <div class="box">
+                    <div class="services-icon">
+                        <img src="images/services_icon/cleanIcon.svg" alt="clean Code">
+                    </div>
+                    <h3>Clean Code</h3>
+                    <p>It is a long established fact that a reader will be distracted by the readaIt is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point ofble content of a page
+                        when looking at its layout. The point of</p>
+                </div>
+                <div class="box">
+                    <div class="services-icon">
+                        <img src="images/services_icon/roketicon.svg" alt="clean Code">
+                    </div>
+                    <h3>Speed optimization</h3>
+                    <p>It is a long established fact that a reader will be distracted by the readaIt is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point ofble content of a page
+                        when looking at its layout. The point of</p>
+                </div>
+                <div class="box">
+                    <div class="services-icon">
+                        <img src="images/services_icon/roketicon.svg" alt="clean Code">
+                    </div>
+                    <h3>Responsive Web Site</h3>
+                    <p>It is a long established fact that a reader will be distracted by the readaIt is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point ofble content of a page
+                        when looking at its layout. The point of</p>
+                </div>
+            </div>
+        </div>
     </section>
     <script src="js/master.js"></script>
 </body>
