finsh lates work

--- a/index.html
+++ b/index.html
@@ -96,36 +96,35 @@
                     <img src="images/illistrator skill.svg" alt="skills photo" />
                 </div>
                 <div class="skills-info">
-
                     <header class="subtitle">
                         <h2 class="title">What I Can Do</h2>
                     </header>
-                    <p>If you’re starting an online business and creating content, you’re almost certainly going to create either written or video content – or both. The problem is that it can be hard to know whicght foot is going to save you a lot of time.If
-                        you’re starting an online business and creating content, you’re almost certainly going to create either written or video content – or both. The problem is that it can be hard to know whicght foot is going to save you a lot of time.If
-                        you’re starting an online business and creating content, you’re almost certainly going to create either written or video content – or both. The problem is that it can be hard to know whicght foot is going to save you a lot of time.</p>
+                    <p>
+                        If you’re starting an online business and creating content, you’re almost certainly going to create either written or video content – or both. The problem is that it can be hard to know whicght foot is going to save you a lot of time.If you’re starting
+                        an online business and creating content, you’re almost certainly going to create either written or video content – or both. The problem is that it can be hard to know whicght foot is going to save you a lot of time.If you’re starting
+                        an online business and creating content, you’re almost certainly going to create either written or video content – or both. The problem is that it can be hard to know whicght foot is going to save you a lot of time.
+                    </p>
 
                     <div class="skills-icons">
                         <div class="item">
-                            <img src="images/skills_icons/Css Icon.svg" alt="">
+                            <img src="images/skills_icons/Css Icon.svg" alt="" />
                         </div>
                         <div class="item">
-                            <img src="images/skills_icons/html icon.svg" alt="">
+                            <img src="images/skills_icons/html icon.svg" alt="" />
                         </div>
                         <div class="item">
-                            <img src="images/skills_icons/js Icon.svg" alt="">
+                            <img src="images/skills_icons/js Icon.svg" alt="" />
                         </div>
                         <div class="item">
-                            <img src="images/skills_icons/react Icon.svg" alt="">
+                            <img src="images/skills_icons/react Icon.svg" alt="" />
                         </div>
-
-
-
-
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
+    <!-- Services -->
 
     <section class="services secion-p">
         <div class="container">
@@ -134,37 +133,93 @@
             </header>
 
             <div class="services-info">
-                <p>If you’re starting an online business and creating content, you’re almost certainly going to create either written or video content – or both. The problem is that it can be hard to know whicght foot is going to save you a lot of time.</p>
+                <p>
+                    If you’re starting an online business and creating content, you’re almost certainly going to create either written or video content – or both. The problem is that it can be hard to know whicght foot is going to save you a lot of time.
+                </p>
             </div>
 
             <div class="services-wraper">
                 <div class="box">
                     <div class="services-icon">
-                        <img src="images/services_icon/cleanIcon.svg" alt="clean Code">
+                        <img src="images/services_icon/cleanIcon.svg" alt="clean Code" />
                     </div>
                     <h3>Clean Code</h3>
-                    <p>It is a long established fact that a reader will be distracted by the readaIt is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point ofble content of a page
-                        when looking at its layout. The point of</p>
+                    <p>
+                        It is a long established fact that a reader will be distracted by the readaIt is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point ofble content of a page when looking at its
+                        layout. The point of
+                    </p>
                 </div>
                 <div class="box">
                     <div class="services-icon">
-                        <img src="images/services_icon/roketicon.svg" alt="clean Code">
+                        <img src="images/services_icon/roketicon.svg" alt="clean Code" />
                     </div>
                     <h3>Speed optimization</h3>
-                    <p>It is a long established fact that a reader will be distracted by the readaIt is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point ofble content of a page
-                        when looking at its layout. The point of</p>
+                    <p>
+                        It is a long established fact that a reader will be distracted by the readaIt is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point ofble content of a page when looking at its
+                        layout. The point of
+                    </p>
                 </div>
                 <div class="box">
                     <div class="services-icon">
-                        <img src="images/services_icon/roketicon.svg" alt="clean Code">
+                        <img src="images/services_icon/roketicon.svg" alt="clean Code" />
                     </div>
                     <h3>Responsive Web Site</h3>
-                    <p>It is a long established fact that a reader will be distracted by the readaIt is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point ofble content of a page
-                        when looking at its layout. The point of</p>
+                    <p>
+                        It is a long established fact that a reader will be distracted by the readaIt is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point ofble content of a page when looking at its
+                        layout. The point of
+                    </p>
                 </div>
             </div>
         </div>
     </section>
+
+    <!-- ./Services -->
+
+    <!-- latest Works -->
+    <section class="latest-work secion-p">
+        <div class="container">
+            <header class="subtitle">
+                <h2 class="title">My Latest <span>Work</span></h2>
+            </header>
+
+            <div class="project-wraper">
+                <div class="project_info">
+                    <div class="project-img">
+                        <img src="images/Project_images/Website1.png" alt="project name 1" />
+                    </div>
+                    <div class="project-data">
+                        <h4>project Name</h4>
+                    </div>
+                </div>
+                <div class="project_info">
+                    <div class="project-img">
+                        <img src="images/Project_images/Website2.png" alt="project name 1" />
+                    </div>
+                    <div class="project-data">
+                        <h4>project Name</h4>
+                    </div>
+                </div>
+                <div class="project_info">
+                    <div class="project-img">
+                        <img src="images/Project_images/Website3.png" alt="project name 1" />
+                    </div>
+                    <div class="project-data">
+                        <h4>project Name</h4>
+                    </div>
+                </div>
+                <div class="project_info">
+                    <div class="project-img">
+                        <img src="images/Project_images/Website4.png" alt="project name 1" />
+                    </div>
+                    <div class="project-data">
+                        <h4>project Name</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ./latest Works -->
+
     <script src="js/master.js"></script>
 </body>
 
