--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="container">
             <div class="hero-wraper">
                 <div class="hero_content">
-                    <h1 class="title">Hey! I,m Ibrahim Mohsen</h1>
+                    <h1 class="title">Hey! I'm Ibrahim Mohsen</h1>
                     <p>
                         is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
                     </p>
