--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <li><a href="#">youtube</a></li>
                     </ul> -->
                 </div>
-                <div class="hero_image"><img src="images/man.png" alt="" /> </div>
+                <div class="hero_image"><img src="images/newImage.png" alt=" web Developer Image " /> </div>
             </div>
         </div>
     </section>
