add Cta Section with first little css

--- a/index.html
+++ b/index.html
@@ -237,6 +237,18 @@
     </section>
     <!-- ./latest Works -->
 
+
+    <!-- CTA  -->
+    <section class="cta secion-p">
+        <div class="container">
+            <div class="cta-wrpper">
+                <h3>you done Need to Be alone Im Here to help you to create your own website</h3>
+                <a href="#" class=" btn-cta ">Hire me now</a>
+            </div>
+        </div>
+    </section>
+    <!-- ./CTA  -->
+
     <script src="js/master.js"></script>
 </body>
 
