edit the title of cta

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
     <section class="cta secion-p">
         <div class="container">
             <div class="cta-wrpper">
-                <h3>you done Need to Be alone Im Here to help you to create your own website</h3>
+                <h3>you don't Need to Be alone Im Here to help you to create your own website</h3>
                 <a href="#" class=" btn-cta ">Hire me now</a>
             </div>
         </div>
