fix some problems

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <header class="subtitle">
                         <h2 class="title">Who Am I</h2>
                     </header>
-                    <p>
+                    <p cla>
                         If you’re starting an online business and creating content, you’re almost certainly going to create either written or video content – or both. The problem is that it can be hard to know whicght foot is going to save you a lot of time.If you’re starting
                         – or both. The problem is that it can be hard to know whicght foot is going to save you a lot of time.
                     </p>
@@ -89,7 +89,7 @@
     </section>
     <!-- ./about me -->
 
-    <!-- skilles -->
+    <!-- skills -->
     <section class="skilles secion-p">
         <div class="container">
             <div class="skills-wraper">
@@ -124,7 +124,7 @@
             </div>
         </div>
     </section>
-
+  <!-- ./skills -->
     <!-- Services -->
 
     <section class="services secion-p">
@@ -144,7 +144,7 @@
                     <div class="services-icon">
                         <img src="images/services_icon/cleanIcon.svg" alt="clean Code" />
                     </div>
-                    <h3>Clean Code</h3>
+                    <h4>Clean Code</h4>
                     <p>
                         It is a long established fact that a reader will be distracted by the readaIt is a
                     </p>
@@ -153,7 +153,7 @@
                     <div class="services-icon">
                         <img src="images/services_icon/responsive-web-design-icon-removebg-preview.svg" alt="clean Code" />
                     </div>
-                    <h3>Responsive Code</h3>
+                    <h4>Responsive Code</h4>
                     <p>
                         It is a long established fact that a reader will be distracted by the readaIt is a
                     </p>
@@ -162,7 +162,7 @@
                     <div class="services-icon">
                         <img src="images/services_icon/roketicon.svg" alt="clean Code" />
                     </div>
-                    <h3>Optimizations and SEO</h3>
+                    <h4>Optimizations and SEO</h4>
                     <p>
                         It is a long established fact that a reader will be distracted by the readaIt is a
                     </p>
@@ -242,8 +242,8 @@
     <section class="cta secion-p">
         <div class="container">
             <div class="cta-wrpper">
-                <h3>you don't Need to Be alone Im Here to help you to create your own website</h3>
-                <a href="#" class=" btn-cta ">Hire me now</a>
+                <h4>you don't Need to Be alone Im Here to help you to create your own website</h4>
+                <a href="#" class="btn-cta">Hire me now</a>
             </div>
         </div>
     </section>
