--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;900&display=swap" rel="stylesheet" />
     <title>I.M - Portfolio</title>
+    <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/master.css" />
+    <link rel="stylesheet" href="css/themify-icons.css" />
 </head>
 
 <body>
@@ -44,7 +46,8 @@
                 <div class="hero_content">
                     <h1 class="title">Hey! I'm Ibrahim Mohsen</h1>
                     <p>
-                        is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+                        is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                        industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
                     </p>
 
                     <div class="buttons-cta">
@@ -79,8 +82,11 @@
                         <h2 class="title">Who Am I</h2>
                     </header>
                     <p cla>
-                        If you’re starting an online business and creating content, you’re almost certainly going to create either written or video content – or both. The problem is that it can be hard to know whicght foot is going to save you a lot of time.If you’re starting
-                        – or both. The problem is that it can be hard to know whicght foot is going to save you a lot of time.
+                        If you’re starting an online business and creating content, you’re almost certainly going to
+                        create either written or video content – or both. The problem is that it can be hard to know
+                        whicght foot is going to save you a lot of time.If you’re starting
+                        – or both. The problem is that it can be hard to know whicght foot is going to save you a lot of
+                        time.
                     </p>
 
                 </div>
@@ -99,7 +105,9 @@
                         <h2 class="title">What I Can Do</h2>
                     </header>
                     <p>
-                        If you’re starting an online business and creating content, you’re almost certainly going to create either written or video content – or both. The problem is that it can be hard to know whicght foot is going to save you a lot of time.If you’re starting
+                        If you’re starting an online business and creating content, you’re almost certainly going to
+                        create either written or video content – or both. The problem is that it can be hard to know
+                        whicght foot is going to save you a lot of time.If you’re starting
                         . The problem is that it can be hard to know whicght foot is going to save you a lot of time.
                     </p>
 
@@ -124,7 +132,7 @@
             </div>
         </div>
     </section>
-  <!-- ./skills -->
+    <!-- ./skills -->
     <!-- Services -->
 
     <section class="services secion-p">
@@ -135,7 +143,8 @@
 
             <div class="services-info">
                 <p>
-                    If you’re starting an online business and crcan be hard to know whicght foot is going to save you a lot of time.
+                    If you’re starting an online business and crcan be hard to know whicght foot is going to save you a
+                    lot of time.
                 </p>
             </div>
 
@@ -151,7 +160,8 @@
                 </div>
                 <div class="box">
                     <div class="services-icon">
-                        <img src="images/services_icon/responsive-web-design-icon-removebg-preview.svg" alt="clean Code" />
+                        <img src="images/services_icon/responsive-web-design-icon-removebg-preview.svg"
+                            alt="clean Code" />
                     </div>
                     <h4>Responsive Code</h4>
                     <p>
@@ -248,6 +258,52 @@
         </div>
     </section>
     <!-- ./CTA  -->
+
+    <footer class="">
+        <div class="container">
+            <div class="footer-wrapper ">
+                <div class="footer_soical_contact">
+                    <div class="site_logo">
+                        <img src="images/I.M_LOGO.svg" alt="logo">
+                    </div>
+                    <h3>Lets Chat. Tell me about your project</h3>
+                    <p>Let's create something together</p>
+                    <ul class="social_media">
+                        <li><a href="#" class="ti-facebook"></a></li>
+                        <li><a href="#" class="ti-linkedin"></a></li>
+                        <li><a href="#" class="ti-github"></a></li>
+                    </ul>
+                    <p class="phone"> <span class="ti-mobile"></span> Phone Number : +2 01018453401</p>
+                 
+                </div>
+                <div class="contact-form flow ">
+                    <form action="#">
+                        <div class="form-control">
+                            <input type="email" name="Clint_email" id="Clint_name" placeholder="Clint_email">
+                        </div>
+                        <div class="form-control">
+                            <input type="" name="Clint_name" id="Clint_name" placeholder="Name">
+                        </div>
+
+                        <div class="form-control">
+                            <label for="">Tell us more about your project*</label>
+                            <textarea name="subject" id="subject" cols="30" rows="10"placeholder="subject"></textarea>
+                        </div>
+                        <div class="form-control">
+                            <input class="btn-primary" type="submit" value="Send">
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+        <div class="subFooter">
+            <p>&copy; 2021 <span>made with <span class="ti-heart"></span> <a href="#">Ibrahim Mohsen</a></span>
+        </div>
+    </footer>
+
+
+
 
     <script src="js/master.js"></script>
 </body>
