--- a/index.html
+++ b/index.html
@@ -274,6 +274,16 @@
                         <li><a href="#" class="ti-github"></a></li>
                     </ul>
                     <p class="phone"> <span class="ti-mobile"></span> Phone Number : +2 01018453401</p>
+                    <div class="location">
+                        
+
+ 
+
+<img src="images/map.png" alt="location">
+ 
+
+
+                    </div>
                  
                 </div>
                 <div class="contact-form flow ">
