--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
                 </div>
 
                 <ul class="links">
+                    <span id="closeMenu" class="ti-close"></span>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Services</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact</a></li>
-                    <span class="ti-close"></span>
+                  
                 </ul>
                
 
@@ -285,7 +286,7 @@
 
                     <form action="#">
                         <h4>Lets Chat. Tell me about your project</h4>
-                        <span>Let's create something together</span>
+                        <span class="small-text">Let's create something together</span>
                         <div class="form-control">
                             <input type="email" name="Clint_email" id="Clint_name" placeholder="Clint_email">
                         </div>
