add some animation

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>I.M - Portfolio</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/themify-icons.css" />
-    <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="css/master.css" />
 </head>
 
@@ -61,13 +61,13 @@
     <div class="container">
         <div class="hero-wraper">
             <div class="hero_content">
-                <h1 class="title ">Hey! I'm Ibrahim Mohsen</h1>
-                <p>
+                <h1 class="title " data-aos="fade">Hey! I'm Ibrahim Mohsen</h1>
+                <p data-aos="fade-right">
                     is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                     industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
                 </p>
 
-                <div class="buttons-cta">
+                <div class="buttons-cta" data-aos="fade-up">
                     <a href="#" class="btn btn-primary">Let's talk</a>
                     <a href="#" class="btn btn-secondary">Download cv</a>
                 </div>
@@ -79,7 +79,7 @@
                     <li><a href="#">youtube</a></li>
                 </ul> -->
             </div>
-            <div class="hero_image"><img src="images/newImage.png" alt=" web Developer Image " /> </div>
+            <div class="hero_image" data-aos="fade-left"><img src="images/newImage.png" alt=" web Developer Image " /> </div>
         </div>
     </div>
 </section> <!--=== END OF SECTION ===-->
@@ -96,10 +96,10 @@
 <section class="about secion-p " id="about" >
     <div class="container">
         <div class="about-wraper">
-            <div class="about-img">
+            <div class="about-img" data-aos="fade-right">
                 <img src="images/man.png" alt="" />
             </div>
-            <div class="about-info">
+            <div class="about-info" data-aos="fade-left">
 
                 <div class="subtitle">
                     <h2 class="title">Who Am I</h2>
@@ -125,7 +125,7 @@
     <div class="container">
         <div class="skills-wraper">
 
-            <div class="skills-info">
+            <div class="skills-info" data-aos="fade-right">
                 <div class="subtitle">
                     <h2 class="title">What I Can Do</h2>
                 </div>
@@ -151,7 +151,7 @@
                     </div>
                 </div>
             </div>
-            <div class="skills_image">
+            <div class="skills_image" data-aos="fade-left">
                 <img src="images/illistrator skill.svg" alt="skills photo" />
             </div>
         </div>
@@ -169,7 +169,7 @@
             <h2 class="title">Why Hire Me For Your<span>Next Project</span></h2>
         </div>
 
-        <div class="services-info">
+        <div class="services-info" >
             <p>
                 If you’re starting an online business and crcan be hard to know whicght foot is going to save you a
                 lot of time.
@@ -177,8 +177,8 @@
         </div>
 
         <div class="services-wraper">
-            <div class="box">
-                <div class="services-icon">
+            <div class="box" data-aos="fade-right">
+                <div class="services-icon" >
                     <img src="images/services_icon/cleanIcon.svg" alt="clean Code" />
                 </div>
                 <h4>Clean Code</h4>
@@ -186,7 +186,7 @@
                     It is a long established fact that a reader will be distracted by the readaIt is a
                 </p>
             </div>
-            <div class="box">
+            <div class="box" data-aos="fade-up">
                 <div class="services-icon">
                     <img src="images/services_icon/responsive-web-design-icon-removebg-preview.svg"
                         alt="clean Code" />
@@ -196,7 +196,7 @@
                     It is a long established fact that a reader will be distracted by the readaIt is a
                 </p>
             </div>
-            <div class="box ">
+            <div class="box " data-aos="fade-right">
                 <div class="services-icon">
                     <img src="images/services_icon/roketicon.svg" alt="clean Code" />
                 </div>
@@ -224,7 +224,7 @@
         </div>
 
         <div class="project-wraper">
-            <div class="project_info">
+            <div class="project_info" data-aos="fade-right">
                 <div class="project-img">
                     <img src="images/Project_images/Website1.png" alt="project name 1" />
                 </div>
@@ -232,7 +232,7 @@
                     <h4>project Name</h4>
                 </div>
             </div>
-            <div class="project_info">
+            <div class="project_info" data-aos="fade-up">
                 <div class="project-img">
                     <img src="images/Project_images/Website2.png" alt="project name 1" />
                 </div>
@@ -240,7 +240,7 @@
                     <h4>project Name</h4>
                 </div>
             </div>
-            <div class="project_info">
+            <div class="project_info" data-aos="fade-left">
                 <div class="project-img">
                     <img src="images/Project_images/Website3.png" alt="project name 1" />
                 </div>
@@ -248,7 +248,7 @@
                     <h4>project Name</h4>
                 </div>
             </div>
-            <div class="project_info">
+            <div class="project_info" data-aos="fade-right">
                 <div class="project-img">
                     <img src="images/Project_images/Website4.png" alt="project name 1" />
                 </div>
@@ -256,7 +256,7 @@
                     <h4>project Name</h4>
                 </div>
             </div>
-            <div class="project_info">
+            <div class="project_info" data-aos="fade-up">
                 <div class="project-img">
                     <img src="images/Project_images/Website3.png" alt="project name 1" />
                 </div>
@@ -264,7 +264,7 @@
                     <h4>project Name</h4>
                 </div>
             </div>
-            <div class="project_info">
+            <div class="project_info" data-aos="fade-left">
                 <div class="project-img">
                     <img src="images/Project_images/Website1.png" alt="project name 1" />
                 </div>
@@ -282,8 +282,8 @@
 <section class="cta secion-p">
     <div class="container">
         <div class="cta-wrpper">
-            <h4>you don't Need to Be alone Im Here for help </h4>
-            <a href="#" class="btn-cta">Hire me now</a>
+            <h4  data-aos="zoom-in">you don't Need to Be alone Im Here for help </h4>
+            <a href="#" class="btn-cta" data-aos="zoom-in-up">Hire me now</a>
         </div>
     </div>
 </section> <!--=== END OF CTA Section ===-->
@@ -296,7 +296,7 @@
 <footer class="footer" id="contact"   data-nav="contact">
     <div class="container">
         <div class="footer-wrapper ">
-            <div class="footer_soical_contact">
+            <div class="footer_soical_contact" data-aos="fade-right">
              
 
             
@@ -311,7 +311,7 @@
                 </ul>
 
             </div>
-            <div class="contact-form flow ">
+            <div class="contact-form flow  " data-aos="fade-left">
                 <div class="site_logo">
                     <img src="images/I.M_LOGO.svg" alt="logo">
                 </div>
@@ -360,6 +360,13 @@
 
     <!-- ----------------------------- main script ----------------------------- -->
     <script src="js/master.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({
+          offset:400,
+          duration:1000
+      });
+    </script>
 </body>
 
 </html>
